; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/vlynq/extr_vlynq.c_vlynq_local_ack.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/vlynq/extr_vlynq.c_vlynq_local_ack.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlynq_device = type { %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [26 x i8] c"%s: local status: 0x%08x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @vlynq_local_ack to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vlynq_local_ack(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.vlynq_device*, align 8
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = call %struct.vlynq_device* @get_irq_chip_data(i32 %5)
  store %struct.vlynq_device* %6, %struct.vlynq_device** %3, align 8
  %7 = load %struct.vlynq_device*, %struct.vlynq_device** %3, align 8
  %8 = getelementptr inbounds %struct.vlynq_device, %struct.vlynq_device* %7, i32 0, i32 0
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = call i32 @readl(i32* %10)
  store i32 %11, i32* %4, align 4
  %12 = load %struct.vlynq_device*, %struct.vlynq_device** %3, align 8
  %13 = getelementptr inbounds %struct.vlynq_device, %struct.vlynq_device* %12, i32 0, i32 1
  %14 = call i32 @dev_name(i32* %13)
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @pr_debug(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i32 %14, i32 %15)
  %17 = load i32, i32* %4, align 4
  %18 = load %struct.vlynq_device*, %struct.vlynq_device** %3, align 8
  %19 = getelementptr inbounds %struct.vlynq_device, %struct.vlynq_device* %18, i32 0, i32 0
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  %22 = call i32 @writel(i32 %17, i32* %21)
  ret void
}

declare dso_local %struct.vlynq_device* @get_irq_chip_data(i32) #1

declare dso_local i32 @readl(i32*) #1

declare dso_local i32 @pr_debug(i8*, i32, i32) #1

declare dso_local i32 @dev_name(i32*) #1

declare dso_local i32 @writel(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
